# cover_letter_agent_adk

./: .dockerignore  .gitignore  Dockerfile  GEMINI.md  README.md  cl_agent.sh  cl_agent_uv.sh  main.py  pyproject.toml  requirements.txt  run_docker.example  run_docker.sh  utils.py
app/: .env.example  .env_remote.example  config.json  deploy.py  deploy_vertex.py  main.py  main_vertex.py  requirements.txt  streamlit_app.py  streamlit_vrtx.py  style.css  ui.py  utils.py  vertex_utils.py
app/.streamlit/: config.toml
app/cover_letter_agent/: agent.py
app/pages/: logs_viewer.py
app/sub_agents/cl_generator/: __init__.py  agent.py
app/sub_agents/cv_parcer/: __init__.py  agent.py
app/sub_agents/job_description/: __init__.py  agent.py
app/sub_agents/job_info/: __init__.py  agent.py
app/sub_agents/web_researcher/: __init__.py  agent.py
cover_letter_agent/: agent.py  safe_agents.py
sub_agents/cl_generator/: agent.py
sub_agents/cv_parcer/: agent.py
sub_agents/job_description/: __init__.py  agent.py
sub_agents/web_researcher/: agent.py
